--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h3>
         Todo
       </h3>
-      <ul ul id="incomplete-tasks">
+      <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
