--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="footer">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+      <a class="footer-link" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?;
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main">
+      <p id="section-add-task">
         <label for="new-task">Add Item</label>
         <input id="new-task" type="text">
         <button>Add</button>
@@ -21,7 +21,7 @@
       <h3>
         Todo
       </h3>
-      <ul id="incomplete-tasks">
+      <ul id="section-todo">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -42,7 +42,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="section-done">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
