--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="footer">
-      <img class="footer-img" src="./eisenhower-matrix.jpg">
-      <a class="footer-link" href="https://goal-life.com/page/method/matrix-eisenhower">
+    <div class="header">
+      <img class="header-img" src="./eisenhower-matrix.jpg">
+      <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?;
       </a>
     </div>
