--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <img class="header-img" src="./eisenhower-matrix.jpg">
       <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?;
       </a>
-    </div>
-    <div class="main">
-      <p id="section-add-task">
-        <label for="new-task">Add Item</label>
+    </header>
+    <main class="main">
+      <section id="section-add-task">        
+        <h3>Add Item</h3>
         <input id="new-task" type="text">
         <button class="button-add">Add</button>
-      </p>
+      </section>
       <h3>
         Todo
       </h3>
@@ -53,7 +53,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
