--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
       <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?;
       </a>
@@ -28,7 +28,7 @@
           <input type="text">
           <button class="button-edit">Edit</button>
           <button class="button-delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Button delete">
           </button>
         </li>
         <li class="edit-mode">
@@ -37,7 +37,7 @@
           <input type="text" value="go shopping" class="task">
           <button class="button-edit">Save</button>
           <button class="button-delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Button delete">
           </button>
         </li>
       </ul>
@@ -49,7 +49,7 @@
           <input type="text">
           <button class="button-edit">Edit</button>
           <button class="button-delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Button delete">
           </button>
         </li>
       </ul>
