--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Todo App</title>
@@ -9,18 +8,18 @@
     <header class="header">
       <img class="header-img" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
       <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">
-        Want more details?;
+        Want more details?
       </a>
-    </header>
+    </header> 
     <main class="main">
-      <section id="section-add-task">        
+      <section id="section-add-task">
         <h3>Add Item</h3>
-        <input id="new-task" type="text">
-        <button class="button-add">Add</button>
+        <div class="task-row-wrapper">
+          <input id="new-task" class="task" type="text">
+          <button class="button-add">Add</button>
+        </div>
       </section>
-      <h3>
-        Todo
-      </h3>
+      <h3>Todo</h3>
       <ul id="section-todo">
         <li>
           <input type="checkbox">
@@ -34,7 +33,7 @@
         <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
-          <input type="text" value="go shopping" class="task">
+          <input type="text" value="Go Shopping" class="task">
           <button class="button-edit">Save</button>
           <button class="button-delete">
             <img src="./remove.svg" alt="Button delete">
@@ -46,7 +45,7 @@
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
-          <input type="text">
+          <input type="text" class="task">
           <button class="button-edit">Edit</button>
           <button class="button-delete">
             <img src="./remove.svg" alt="Button delete">
