--- a/index.html
+++ b/index.html
@@ -6,52 +6,56 @@
   </head>
   <body>
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
-      <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
     </header> 
     <main class="main">
-      <section id="section-add-task">
-        <h3>Add Item</h3>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button class="button-add">Add</button>
+      <section class="section add-task">
+        <h3 class="add-task__title">Add Item</h3>
+        <div class="add-task__content">
+          <input id="new-task" class="add-task__input" type="text">
+          <button class="button button_add">Add</button>
         </div>
+      </section>      
+      <section class="section todo">
+        <h3 class="section__title">Todo</h3>
+        <ul class="section__content" id="section-todo">
+          <li class="task">
+            <input class="task__checkbox" type="checkbox">
+            <label class="task__name">Pay Bills</label>
+            <input class="task__input" type="text" >
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img src="./remove.svg" alt="Button delete">
+            </button>
+          </li>     
+          <li class="task edit-mode">
+            <input class="task__checkbox" type="checkbox" >
+            <label class="task__name">Go Shopping</label>
+            <input class="task__input" type="text" value="Go Shopping">
+            <button class="button button_edit">Save</button>
+            <button class="button button_delete">
+              <img src="./remove.svg" alt="Button delete">
+            </button>
+          </li>
+        </ul>
+      </section>  
+      <section class="section done">
+        <h3 class="section__title">Completed</h3>
+        <ul class="section__content" id="section-done">
+          <li class="task">
+            <input class="task__checkbox" type="checkbox" checked>
+            <label class="task__name">See the Doctor</label>
+            <input class="task__input" type="text">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img src="./remove.svg" alt="Button delete">
+            </button>
+          </li>
+        </ul>
       </section>
-      <h3>Todo</h3>
-      <ul id="section-todo">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text">
-          <button class="button-edit">Edit</button>
-          <button class="button-delete">
-            <img src="./remove.svg" alt="Button delete">
-          </button>
-        </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="button-edit">Save</button>
-          <button class="button-delete">
-            <img src="./remove.svg" alt="Button delete">
-          </button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
-      <ul id="section-done">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="button-edit">Edit</button>
-          <button class="button-delete">
-            <img src="./remove.svg" alt="Button delete">
-          </button>
-        </li>
-      </ul>
     </main>
     <script src="app.js"></script>
   </body>
